# S-lua

./: .gitignore  CMakeLists.txt  README.md  cmake_configure.bat  slua.ps1  test_mine.ll  test_mine.slua
compiler/include/slua/: AST.h  Diagnostics.h  IREmitter.h  Lexer.h  Parser.h  Resolver.h  SemanticConfig.h  TypeChecker.h
compiler/src/codegen/: IREmitter.cpp
compiler/src/driver/: main.cpp
compiler/src/lexer/: Lexer.cpp
compiler/src/parser/: Parser.cpp
compiler/src/sema/: Diagnostics.cpp  Resolver.cpp  SemanticConfig.cpp  TypeChecker.cpp
examples/: String.slua  Window.slua  concat_test.slua  hello_nonstrict.slua  io_test.slua  loop.slua  os.slua  test_arity.slua  test_const.slua  test_mine.slua  test_nonstrict.slua  test_null.slua  test_types.slua  test_undef.slua  trya_fonts.slua  utils.slua
runtime/: CMakeLists.txt
runtime/include/: slua_runtime.h
stdlib/: slua_raylib.c  slua_stdlib.c  slua_stdlib.h
tools/extensions/vscode/: extension.js  language-configuration.json  package.json  slua-extension-0.2.0.vsix
tools/extensions/vscode/snippets/: slua.json
tools/extensions/vscode/syntaxes/: slua.tmLanguage.json
tools/extensions/vscode/themes/: slua-dark.json
tools/lsp/slua-lsp/: main.cpp
